# hisaab-app

./: README.md  app.py  database.py  pyproject.toml  requirements.txt  utils.py
static/css/: dashboard.css  home.css
static/js/: dashboard.js  expenses.js  ledger.js  products.js  replacements.js  sales.js
templates/: base.html  chart.html  customers.html  dash_charts.html  dash_nav.html  dashboard.html  expenses.html  footer.html  home.html  ledger.html  login.html  nav.html  products.html  register.html  replacements.html  sales.html  script.html  subscription.html
