[tool.poetry]
name = "repl_nix_hisaab-app"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
pandas = "^1.5.3"
sklearn = "^0.0.post2"
SQLAlchemy = "^2.0.4"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
